--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "moment": "^2.20.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4",
     "sqlite3": "^3.1.13"
